# TAI

./: README.md  index.html  package.json  vite.config.js
public/: sw.js  tva.css
src/: App.svelte  app.css  main.js  stores.legacy.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src/components/: EraList.svelte  ResourcePanel.svelte
src/lib/: stores.js
src/lib/data/: eras.js
